# Bioinformatyka

./: CMakeLists.txt  README.md  SBH.py  generator.py  instance-1-300.txt  instance-1-500.txt  instance-1-700.txt  instance-2-600.txt  instance-50-300.txt  instance-50-400.txt  instance-50-500.txt  instance-50-600.txt  instance-50-700.txt  instance.txt  instances_runner.py  original-1-300.txt  original-1-500.txt  original-1-700.txt  original-2-600.txt  original-50-300.txt  original-50-400.txt  original-50-500.txt  original-50-600.txt  original-50-700.txt  original.txt  results.txt  test.py  tmp_instance.txt  tmp_instance300.txt  tmp_instance400.txt  tmp_instance500.txt  tmp_instance600.txt  tmp_instance700.txt  tmp_original.txt  tmp_original300.txt  tmp_original400.txt  tmp_original500.txt  tmp_original600.txt  tmp_original700.txt
instances/: instance-1-300.txt  instance-1-700.txt  instance-2-600.txt  instance-50-600.txt  instance-50-700.txt  original-1-700.txt  original-2-600.txt  original-50-300.txt  original-50-400.txt  original-50-500.txt  original-50-600.txt  original-50-700.txt
src/: aco.cpp  aco.h  ant.cpp  ant.h  config.h  instance_parser.cpp  instance_parser.h  instance_runner.cpp  instance_runner.h  levenshtein.cpp  levenshtein.h  main.cpp  sbh.cpp  sbh.h  settings.h
